cxx-sensors/src/test/resources/org/sonar/cxx/sensors/reports-project/clang-tidy-reports/cpd.report-error.txt
sources\utils\code_chunks.cpp:2:5: error: use of undeclared identifier 'gets' [clang-diagnostic-error]
    gets(buffer); //rats violation
    ^
